--- a/components/item.module.css
+++ b/components/item.module.css
@@ -118,7 +118,7 @@ a.link:visited {
     display: flex;
     justify-content: flex-start;
     min-width: 0;
-    padding-bottom: .5rem;
+    padding-top: .5rem;
 }
 
 .item .companyImage {
@@ -170,6 +170,7 @@ a.link:visited {
 
 .children {
     margin-left: 28px;
+    padding-top: .5rem;
 }
 
 .rank {
